crates/simpl-syntax/src/snapshots/simpl_syntax2__test__function_application-3.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
App {
    func: Var {
        name: "f",
    },
    arg: App {
        func: Var {
            name: "g",
        },
        arg: Var {
            name: "x",
        },
    },
}
