crates/simpl-syntax/src/snapshots/simpl_syntax2__test__if_then_else-2.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
If {
    test: Lit {
        val: Bool(
            true,
        ),
    },
    then_branch: If {
        test: Lit {
            val: Bool(
                false,
            ),
        },
        then_branch: Lit {
            val: Float(
                0.5,
            ),
        },
        else_branch: Lit {
            val: Float(
                1.5,
            ),
        },
    },
    else_branch: Lit {
        val: Int(
            0,
        ),
    },
}
