crates/simpl-syntax/src/snapshots/simpl_syntax2__test__let_binding-2.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Let {
    bindings: [
        (
            "x",
            Lit {
                val: Int(
                    5,
                ),
            },
        ),
        (
            "y",
            Lit {
                val: Bool(
                    false,
                ),
            },
        ),
    ],
    body: Var {
        name: "x",
    },
}
