crates/simpl-syntax/src/snapshots/simpl_syntax2__test__literal-4.snap
---
source: crates/simpl-syntax2/src/test.rs
expression: parse(src).unwrap()
---
Lit {
    val: Bool(
        false,
    ),
}
